--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "knex": "^2.1.0",
     "minimist": "^1.2.6",
     "mongoose": "^6.4.5",
+    "mysql": "^2.18.1",
     "sqlite3": "^5.0.9"
   }
 }
